Added Layouts for Reg, fixed dark mode, back to otp bug

--- a/app/src/main/res/layout/activity_verify_otp.xml
+++ b/app/src/main/res/layout/activity_verify_otp.xml
@@ -118,6 +118,7 @@
             android:layout_width="42dp"
             android:layout_height="54dp"
             android:maxLength="1"
+            android:textColor="#000000"
             android:textAlignment="center"
             android:background="@drawable/back_3"
             android:inputType="phone"
@@ -127,6 +128,7 @@
             android:layout_width="42dp"
             android:layout_height="54dp"
             android:maxLength="1"
+            android:textColor="#000000"
             android:textAlignment="center"
             android:background="@drawable/back_3"
             android:inputType="phone"
@@ -138,6 +140,7 @@
             android:layout_height="54dp"
             android:background="@drawable/back_3"
             android:maxLength="1"
+            android:textColor="#000000"
             android:textAlignment="center"
             android:inputType="phone"
             android:layout_marginLeft="10dp"
@@ -148,6 +151,7 @@
             android:layout_height="54dp"
             android:background="@drawable/back_3"
             android:maxLength="1"
+            android:textColor="#000000"
             android:textAlignment="center"
             android:inputType="phone"
             android:layout_marginLeft="10dp"
@@ -158,6 +162,7 @@
            android:layout_height="54dp"
            android:background="@drawable/back_3"
            android:maxLength="1"
+           android:textColor="#000000"
            android:textAlignment="center"
            android:inputType="phone"
            android:layout_marginLeft="10dp"
