--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -94,6 +94,7 @@
         android:layout_width="match_parent"
         android:layout_marginHorizontal="60dp"
         android:layout_height="45dp"
+        android:textColor="#000000"
         android:layout_marginTop="100dp"
         android:background="@drawable/back_1"
         android:drawableLeft="@drawable/ic_phone"
