--- a/app/src/main/res/layout/fragment_reg_address2.xml
+++ b/app/src/main/res/layout/fragment_reg_address2.xml
@@ -1,97 +1,123 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.farmerapp.Fragments.RegPhoto">
-
-
-    <RelativeLayout
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context="com.example.farmerapp.Fragments.RegisterPhotoFragment">
+    <androidx.cardview.widget.CardView
         android:layout_width="309dp"
-        android:layout_height="364dp"
-        android:layout_marginLeft="53dp"
-        android:layout_marginRight="54dp"
-        android:layout_marginTop="200dp"
-        android:layout_marginBottom="293dp"
-        android:background="@drawable/reglayout">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:background="@color/white"
+        app:cardCornerRadius="30dp"
+        app:cardElevation="4dp">
 
-        <ImageView
-            android:layout_width="309dp"
-            android:layout_height="236dp"
-            android:background="@drawable/reg_gradient"/>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="17dp"
-            android:layout_marginBottom="153dp"
-            android:textColor="#ffffff"
-            android:textSize="18sp"
-            android:text="Address"/>
+            <ImageView
+                android:id="@+id/address_gradient"
+                android:layout_width="309dp"
+                android:layout_height="250dp"
+                android:background="@drawable/reg_gradient"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0" />
+            <Button
+                android:id="@+id/next"
+                android:layout_width="120dp"
+                android:layout_height="48dp"
+                android:background="@drawable/roundbutton"
+                android:text="Next"
+                android:textColor="@color/white"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintVertical_bias="0.0"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="30dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/address_gradient" />
 
-        <ImageView
-            android:id="@+id/back"
-            android:layout_width="19dp"
-            android:layout_height="16dp"
-            android:background="@drawable/baseline_keyboard_backspace_white_18dp"
-            android:layout_marginLeft="16.5dp"
-            android:layout_marginRight="273.4dp"
-            android:layout_marginTop="24dp"
-            android:layout_marginBottom="323.5dp"/>
+            <EditText
+                android:id="@+id/city"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginHorizontal="25dp"
+                android:layout_marginTop="15dp"
+                android:background="@drawable/textgradient"
+                android:gravity="center"
+                android:hint="City"
+                android:textColorHint="@color/white"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/pin" />
 
-        <EditText
-            android:id="@+id/Pin"
-            android:layout_width="256dp"
-            android:layout_height="48dp"
-            android:layout_marginLeft="26dp"
-            android:layout_marginTop="56dp"
-            android:layout_marginRight="27dp"
-            android:layout_marginBottom="260dp"
-            android:background="@drawable/textgradient"
-            android:gravity="center"
-            android:hint="Pin"
-            android:textColorHint="#ffffff" />
+            <EditText
+                android:id="@+id/state"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginHorizontal="25dp"
+                android:layout_marginTop="15dp"
+                android:background="@drawable/textgradient"
+                android:gravity="center"
+                android:hint="State"
+                android:textColorHint="@color/white"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/city" />
 
-        <EditText
-            android:id="@+id/City"
-            android:layout_width="256dp"
-            android:layout_height="48dp"
-            android:hint="City"
-            android:gravity="center"
-            android:textColorHint="#ffffff"
-            android:layout_marginTop="116dp"
-            android:layout_marginBottom="200dp"
-            android:layout_marginLeft="26dp"
-            android:layout_marginRight="27dp"
-            android:background="@drawable/textgradient"/>
+            <EditText
+                android:id="@+id/pin"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginHorizontal="25dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/textgradient"
+                android:gravity="center"
+                android:hint="Pin"
+                android:textColorHint="@color/white"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/address_text" />
 
-        <EditText
-            android:id="@+id/State"
-            android:layout_width="256dp"
-            android:layout_height="48dp"
-            android:hint="State"
-            android:gravity="center"
-            android:textColorHint="#ffffff"
-            android:layout_marginTop="175dp"
-            android:layout_marginBottom="141dp"
-            android:layout_marginLeft="26dp"
-            android:layout_marginRight="27dp"
-            android:background="@drawable/textgradient"/>
-
-        <Button
-            android:id="@+id/next"
-            android:layout_width="120dp"
-            android:layout_height="48dp"
-            android:text="Next"
-            android:textColor="#ffffff"
-            android:background="@drawable/roundbutton"
-            android:layout_marginBottom="20dp"
-            android:layout_marginRight="95dp"
-            android:layout_marginLeft="94dp"
-            android:layout_marginTop="296dp"/>
+            <ImageView
+                android:id="@+id/back"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginTop="15dp"
+                android:src="@drawable/ic_arrow_back"
+                app:layout_constraintBottom_toBottomOf="@id/address_gradient"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.1"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@id/address_gradient"
+                app:layout_constraintVertical_bias="0.0" />
 
 
-    </RelativeLayout>
 
+            <TextView
+                android:id="@+id/address_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:text="Address"
+                android:textColor="#ffffff"
+                android:textSize="18sp"
+                app:layout_constraintBottom_toBottomOf="@id/address_gradient"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@id/address_gradient"
+                app:layout_constraintVertical_bias="0.0" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 
 </FrameLayout>
