--- a/app/src/main/res/layout/fragment_reg_details.xml
+++ b/app/src/main/res/layout/fragment_reg_details.xml
@@ -1,84 +1,112 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.farmerapp.Fragments.RegPhoto">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context="com.example.farmerapp.Fragments.RegisterPhotoFragment">
 
 
-    <RelativeLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="309dp"
-        android:layout_height="364dp"
-        android:layout_marginLeft="53dp"
-        android:layout_marginRight="54dp"
-        android:layout_marginTop="200dp"
-        android:layout_marginBottom="293dp"
-        android:background="@drawable/reglayout">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:background="@color/white"
+        app:cardCornerRadius="30dp"
+        app:cardElevation="4dp">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <EditText
+            android:id="@+id/name"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:background="@drawable/reglayout"
+            android:gravity="center"
+            android:hint="Name"
+            android:textSize="13sp"
+            android:textColorHint="#c7c7c7"
+            android:layout_marginHorizontal="25dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintVertical_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/details_gradient"
+            android:layout_marginTop="50dp"/>
+        <EditText
+            android:id="@+id/phone"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:background="@drawable/reglayout"
+            android:gravity="center"
+            android:hint="Phone Number(Alternative)"
+            android:textSize="13sp"
+            android:textColorHint="#c7c7c7"
+            android:layout_marginHorizontal="25dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintVertical_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/name"
+            android:layout_marginTop="20dp"/>
+
+
 
         <ImageView
-            android:layout_width="309dp"
+            android:id="@+id/details_gradient"
+            android:layout_width="match_parent"
             android:layout_height="63dp"
-            android:background="@drawable/reg_gradient"/>
+            android:background="@drawable/reg_gradient"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="24dp"
-            android:layout_marginBottom="15dp"
+            android:text="Details"
             android:textColor="#ffffff"
             android:textSize="18sp"
-            android:text="Details"/>
-        
+            app:layout_constraintBottom_toBottomOf="@id/details_gradient"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/details_gradient"
+            app:layout_constraintVertical_bias="0.5" />
         <ImageView
             android:id="@+id/back"
-            android:layout_width="19dp"
-            android:layout_height="16dp"
-            android:background="@drawable/baseline_keyboard_backspace_white_18dp"
-            android:layout_marginLeft="16.5dp"
-            android:layout_marginRight="273.4dp"
-            android:layout_marginTop="24dp"
-            android:layout_marginBottom="323.5dp"/>
-
-        <EditText
-            android:id="@+id/Name"
-            android:layout_width="256dp"
-            android:layout_height="48dp"
-            android:hint="Name"
-            android:gravity="center"
-            android:textColorHint="#c7c7c7"
-            android:layout_marginTop="119dp"
-            android:layout_marginBottom="197dp"
-            android:layout_marginLeft="26dp"
-            android:layout_marginRight="27dp"
-            android:background="@drawable/reglayout"/>
-
-        <EditText
-            android:id="@+id/Phone"
-            android:layout_width="256dp"
-            android:layout_height="48dp"
-            android:hint="Phone Number (Alternate)"
-            android:gravity="center"
-            android:textColorHint="#c7c7c7"
-            android:layout_marginTop="188dp"
-            android:layout_marginBottom="128dp"
-            android:layout_marginLeft="26dp"
-            android:layout_marginRight="27dp"
-            android:background="@drawable/reglayout"/>
-
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/ic_arrow_back"
+            app:layout_constraintBottom_toBottomOf="@id/details_gradient"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/details_gradient"
+            app:layout_constraintVertical_bias="0.5" />
         <Button
             android:id="@+id/next"
             android:layout_width="120dp"
             android:layout_height="48dp"
             android:text="Next"
-            android:textColor="#ffffff"
+            android:textColor="@color/white"
             android:background="@drawable/roundbutton"
-            android:layout_marginBottom="20dp"
-            android:layout_marginRight="95dp"
-            android:layout_marginLeft="94dp"
-            android:layout_marginTop="296dp"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintVertical_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/phone"
+            android:layout_marginTop="60dp"
+            android:layout_marginBottom="30dp"/>
 
 
-    </RelativeLayout>
-
-
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 </FrameLayout>
