--- a/app/src/main/res/layout/fragment_reg_photo.xml
+++ b/app/src/main/res/layout/fragment_reg_photo.xml
@@ -1,71 +1,96 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:Button="http://schemas.android.com/apk/res-auto"
-    tools:context="com.example.farmerapp.Fragments.RegPhoto">
+    android:layout_height="wrap_content"
+    tools:context="com.example.farmerapp.Fragments.RegisterPhotoFragment">
 
-
-    <RelativeLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="309dp"
-        android:layout_height="364dp"
-        android:layout_marginLeft="53dp"
-        android:layout_marginRight="54dp"
-        android:layout_marginTop="200dp"
-        android:layout_marginBottom="293dp"
-        android:background="@drawable/reglayout">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:background="@color/white"
+        app:cardCornerRadius="30dp"
+        app:cardElevation="4dp">
 
-
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
         <ImageView
-            android:layout_width="309dp"
-            android:layout_height="145dp"
-            android:background="@drawable/reg_gradient"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Profile Photo"
-            android:textSize="23sp"
-            android:textColor="#ffffff"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="15dp"
-            android:layout_marginBottom="318dp"
-            />
-        <ImageView
-            android:id="@+id/photo"
-            android:layout_width="146dp"
+            android:id="@+id/photo_gradient"
+            android:layout_width="match_parent"
             android:layout_height="146dp"
-            android:layout_marginTop="65dp"
-            android:layout_marginBottom="153dp"
-            android:layout_marginLeft="81dp"
-            android:layout_marginRight="81dp"
-            android:background="@drawable/profile"/>
-
-
-        <Button
-            android:id="@+id/upload"
-            android:layout_width="23dp"
-            android:layout_height="23dp"
-            android:layout_marginLeft="175dp"
-            android:layout_marginTop="181dp"
-            android:background="@drawable/baseline_add_black_18dp"
-            android:layout_marginRight="95dp"
-            android:layout_marginBottom="160dp" />
+            android:background="@drawable/reg_gradient"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
         <Button
             android:id="@+id/next"
             android:layout_width="120dp"
             android:layout_height="48dp"
             android:text="Next"
-            android:textColor="#ffffff"
+            android:textColor="@color/white"
+            android:layout_marginTop="70dp"
+            android:layout_marginBottom="30dp"
             android:background="@drawable/roundbutton"
-            android:layout_marginBottom="20dp"
-            android:layout_marginRight="95dp"
-            android:layout_marginLeft="94dp"
-            android:layout_marginTop="296dp"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/photo"
+            app:layout_constraintVertical_bias="0.0" />
 
 
-    </RelativeLayout>
 
+
+
+        <TextView
+            android:id="@+id/profile_photo_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:text="Profile Photo"
+            android:textColor="@color/white"
+            android:textSize="23sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <ImageView
+            android:id="@+id/photo"
+            android:layout_width="146dp"
+            android:layout_height="146dp"
+            android:layout_marginTop="73dp"
+            android:background="@drawable/profile"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
+        <ImageView
+            android:id="@+id/upload"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginStart="16dp"
+            android:background="@drawable/round_white_back"
+            android:src="@drawable/ic_add"
+            app:layout_constraintBottom_toBottomOf="@id/photo"
+            app:layout_constraintEnd_toEndOf="@+id/photo"
+            app:layout_constraintHorizontal_bias="0.85"
+            app:layout_constraintStart_toStartOf="@id/photo"
+            app:layout_constraintTop_toTopOf="@id/photo"
+            app:layout_constraintVertical_bias="0.85" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
 
 </FrameLayout>
