registration inputs added

--- a/app/src/main/res/layout/fragment_reg_address2.xml
+++ b/app/src/main/res/layout/fragment_reg_address2.xml
@@ -34,6 +34,8 @@
                 android:background="@drawable/roundbutton"
                 android:text="Next"
                 android:textColor="@color/white"
+                android:enabled="false"
+                android:alpha="0.3"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
