--- a/app/src/main/res/layout/activity_register_details.xml
+++ b/app/src/main/res/layout/activity_register_details.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
-    <androidx.viewpager.widget.ViewPager
+    <com.example.farmerapp.ViewPager.RegistrationViewPager
         android:id="@+id/regTabs"
         android:layout_width="match_parent"
         android:layout_height="0dp"
