--- a/app/src/main/res/layout/fragment_reg_address1.xml
+++ b/app/src/main/res/layout/fragment_reg_address1.xml
@@ -114,6 +114,8 @@
                 android:text="Next"
                 android:textColor="@color/white"
                 android:background="@drawable/roundbutton"
+                android:enabled="false"
+                android:alpha="0.3"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
