--- a/app/src/main/res/layout/fragment_reg_photo.xml
+++ b/app/src/main/res/layout/fragment_reg_photo.xml
@@ -37,6 +37,8 @@
             android:layout_marginTop="70dp"
             android:layout_marginBottom="30dp"
             android:background="@drawable/roundbutton"
+            android:enabled="false"
+            android:alpha="0.3"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -63,12 +65,14 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0" />
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/photo"
             android:layout_width="146dp"
             android:layout_height="146dp"
             android:layout_marginTop="73dp"
             android:background="@drawable/profile"
+            app:civ_border_color="@color/colorPrimary"
+            app:civ_border_width="2dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
