--- a/app/src/main/res/layout/fragment_reg_address1.xml
+++ b/app/src/main/res/layout/fragment_reg_address1.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="#ffffff"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.example.farmerapp.Fragments.RegisterPhotoFragment">
 
@@ -10,7 +11,7 @@
         android:layout_width="309dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:background="@color/white"
+        android:background="#ffffff"
         app:cardCornerRadius="30dp"
         app:cardElevation="4dp">
 
@@ -26,6 +27,7 @@
                 android:gravity="center"
                 android:hint="Address Line 1"
                 android:textSize="13sp"
+                android:textColor="#000000"
                 android:textColorHint="#c7c7c7"
                 android:layout_marginHorizontal="25dp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -41,6 +43,7 @@
                 android:layout_height="48dp"
                 android:background="@drawable/reglayout"
                 android:gravity="center"
+                android:textColor="#000000"
                 android:hint="Address Line 2"
                 android:textSize="13sp"
                 android:textColorHint="#c7c7c7"
@@ -58,6 +61,7 @@
                 android:layout_height="48dp"
                 android:background="@drawable/reglayout"
                 android:gravity="center"
+                android:textColor="#000000"
                 android:hint="Landmark (Optional)"
                 android:textSize="13sp"
                 android:textColorHint="#c7c7c7"
