--- a/app/src/main/res/layout/fragment_reg_details.xml
+++ b/app/src/main/res/layout/fragment_reg_details.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="#ffffff"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.example.farmerapp.Fragments.RegisterPhotoFragment">
 
@@ -10,7 +11,7 @@
         android:layout_width="309dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:background="@color/white"
+        android:background="#ffffff"
         app:cardCornerRadius="30dp"
         app:cardElevation="4dp">
 
@@ -26,6 +27,7 @@
             android:gravity="center"
             android:hint="Name"
             android:textSize="13sp"
+            android:textColor="#000000"
             android:textColorHint="#c7c7c7"
             android:layout_marginHorizontal="25dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -44,6 +46,7 @@
             android:hint="Phone Number(Alternative)"
             android:inputType="phone"
             android:maxLength="10"
+            android:textColor="#000000"
             android:textSize="13sp"
             android:textColorHint="#c7c7c7"
             android:layout_marginHorizontal="25dp"
