--- a/app/src/main/res/layout/fragment_reg_photo.xml
+++ b/app/src/main/res/layout/fragment_reg_photo.xml
@@ -3,13 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="#ffffff"
     tools:context="com.example.farmerapp.Fragments.RegisterPhotoFragment">
 
     <androidx.cardview.widget.CardView
         android:layout_width="309dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:background="@color/white"
+        android:background="#ffffff"
         app:cardCornerRadius="30dp"
         app:cardElevation="4dp">
 
