--- a/app/src/main/res/layout/fragment_reg_address2.xml
+++ b/app/src/main/res/layout/fragment_reg_address2.xml
@@ -52,10 +52,8 @@
                 android:layout_height="48dp"
                 android:layout_marginHorizontal="25dp"
                 android:layout_marginTop="15dp"
-                android:gravity="center"
-                android:dropDownSelector="#ffffff"
                 android:spinnerMode="dropdown"
-                android:foregroundGravity="center"
+                android:dropDownSelector="@color/white"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -65,13 +63,11 @@
                 android:id="@+id/state"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
-                android:dropDownSelector="#ffffff"
                 android:layout_marginHorizontal="25dp"
                 android:layout_marginTop="15dp"
-                android:gravity="center"
-                android:spinnerMode="dropdown"
-                android:foregroundGravity="center"
                 android:textColorHint="@color/white"
+                android:spinnerMode="dropdown"
+                android:popupBackground="@color/white"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -87,6 +83,8 @@
                 android:background="@drawable/textgradient"
                 android:gravity="center"
                 android:hint="Pin"
+                android:inputType="phone"
+                android:maxLength="6"
                 android:textColorHint="@color/white"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
