--- a/app/src/main/res/layout/spinner_row.xml
+++ b/app/src/main/res/layout/spinner_row.xml
@@ -2,15 +2,16 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/white">
     <TextView
         android:id="@+id/textView"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/colorPrimary"
         android:textSize="18sp"
+        android:layout_centerInParent="true"
         android:gravity="center_horizontal"
         android:paddingVertical="10dp"
-        android:background="@color/white"
         android:text="City"/>
 </RelativeLayout>
