--- a/app/src/main/res/layout/fragment_reg_address2.xml
+++ b/app/src/main/res/layout/fragment_reg_address2.xml
@@ -52,8 +52,7 @@
                 android:layout_height="48dp"
                 android:layout_marginHorizontal="25dp"
                 android:layout_marginTop="15dp"
-                android:spinnerMode="dropdown"
-                android:dropDownSelector="@color/white"
+                android:background="@android:color/transparent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -65,9 +64,7 @@
                 android:layout_height="48dp"
                 android:layout_marginHorizontal="25dp"
                 android:layout_marginTop="15dp"
-                android:textColorHint="@color/white"
-                android:spinnerMode="dropdown"
-                android:popupBackground="@color/white"
+                android:background="@android:color/transparent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -80,12 +77,12 @@
                 android:layout_height="48dp"
                 android:layout_marginHorizontal="25dp"
                 android:layout_marginTop="20dp"
-                android:background="@drawable/textgradient"
                 android:gravity="center"
                 android:hint="Pin"
                 android:inputType="phone"
+                android:background="@drawable/textgradient"
                 android:maxLength="6"
-                android:textColorHint="@color/white"
+                android:textColorHint="#99FFFFFF"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
