--- a/app/src/main/res/layout/spinner_row.xml
+++ b/app/src/main/res/layout/spinner_row.xml
@@ -3,14 +3,17 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:backgroundTint="@color/white">
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/place_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/colorPrimary"
         android:textSize="18sp"
-        android:layout_centerInParent="true"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="20dp"
         android:gravity="center_horizontal"
         android:paddingVertical="10dp"
         android:text="City"/>
