added LocationUtil class

--- a/app/src/main/res/layout/fragment_reg_address1.xml
+++ b/app/src/main/res/layout/fragment_reg_address1.xml
@@ -23,13 +23,14 @@
                 android:id="@+id/address_1"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
+                android:maxLines="4"
                 android:background="@drawable/reglayout"
-                android:gravity="center"
                 android:hint="Address Line 1"
                 android:textSize="13sp"
                 android:textColor="#000000"
                 android:textColorHint="#c7c7c7"
                 android:layout_marginHorizontal="25dp"
+                android:paddingHorizontal="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -41,13 +42,14 @@
                 android:id="@+id/address_2"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
+                android:maxLines="3"
                 android:background="@drawable/reglayout"
-                android:gravity="center"
                 android:textColor="#000000"
                 android:hint="Address Line 2"
                 android:textSize="13sp"
                 android:textColorHint="#c7c7c7"
                 android:layout_marginHorizontal="25dp"
+                android:paddingHorizontal="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -59,12 +61,13 @@
                 android:id="@+id/landmark"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
+                android:maxLines="3"
                 android:background="@drawable/reglayout"
-                android:gravity="center"
                 android:textColor="#000000"
                 android:hint="Landmark (Optional)"
                 android:textSize="13sp"
                 android:textColorHint="#c7c7c7"
+                android:paddingHorizontal="20dp"
                 android:layout_marginHorizontal="25dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -148,7 +151,8 @@
                     android:layout_gravity="center"
                     android:background="@drawable/ic_location" />
                 <TextView
-                    android:layout_width="102dp"
+                    android:id="@+id/location_textview"
+                    android:layout_width="wrap_content"
                     android:layout_height="22dp"
                     android:text="Your Location"
                     android:textColor="#0eb095"
